# AnnotationLiftOver

./: .gitignore  AnnotationLiftOver  CMakeCache.txt  CMakeLists.txt  Cds.cpp  Cds.h  InputParser.cpp  InputParser.h  Makefile  Makefilex99  README.md  TODO  alignNeedlemanForTranscript.cpp  alignNeedlemanForTranscript.h  alignNeedlemanForTranscript2.cpp  alignNeedlemanForTranscript2.h  alignNeedlemanWunsch.cpp  alignNeedlemanWunsch.h  cmake_install.cmake  controlLayer.cpp  controlLayer.h  geneStructureBasedRealignment  geneStructureBasedRealignment.cbp  main.cpp  makefileback  model.cpp  model.h  myMsa.cpp  myMsa.h  myfunctions (baoxing’s MacBook Pro's conflicted copy 2017-08-10).cpp  myfunctions.cpp  myfunctions.h  myutil.cpp  myutil.h  nucleotideCodeSubstitutionMatrix.cpp  nucleotideCodeSubstitutionMatrix.h  parameters.cpp  parameters.h  reAnnotationAndMsa.BACKUP.2.cpp  reAnnotationAndMsa.BACKUP.4.cpp  (+22 more)
exportToHTML/: myfunctions.cpp.html
seqan/: CMakeLists.txt
