cmake_minimum_required(VERSION 3.7)
project(geneStructureBasedRealignment)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        seqan/align/align_base.h
        seqan/align/align_cols.h
        seqan/align/align_config.h
        seqan/align/align_interface_wrapper.h
        seqan/align/align_iterator_base.h
        seqan/align/align_metafunctions.h
        seqan/align/align_traceback.h
        seqan/align/alignment_algorithm_tags.h
        seqan/align/alignment_operations.h
        seqan/align/dp_algorithm_impl.h
        seqan/align/dp_align_simd_helper.h
        seqan/align/dp_band.h
        seqan/align/dp_cell.h
        seqan/align/dp_cell_affine.h
        seqan/align/dp_cell_dynamic.h
        seqan/align/dp_cell_linear.h
        seqan/align/dp_context.h
        seqan/align/dp_formula.h
        seqan/align/dp_formula_affine.h
        seqan/align/dp_formula_dynamic.h
        seqan/align/dp_formula_linear.h
        seqan/align/dp_matrix.h
        seqan/align/dp_matrix_navigator.h
        seqan/align/dp_matrix_navigator_score_matrix.h
        seqan/align/dp_matrix_navigator_score_matrix_sparse.h
        seqan/align/dp_matrix_navigator_trace_matrix.h
        seqan/align/dp_matrix_sparse.h
        seqan/align/dp_meta_info.h
        seqan/align/dp_profile.h
        seqan/align/dp_scout.h
        seqan/align/dp_scout_simd.h
        seqan/align/dp_setup.h
        seqan/align/dp_trace_segment.h
        seqan/align/dp_traceback_adaptor.h
        seqan/align/dp_traceback_impl.h
        seqan/align/evaluate_alignment.h
        seqan/align/fragment.h
        seqan/align/gap_anchor.h
        seqan/align/gapped_value_type.h
        seqan/align/gaps_anchor.h
        seqan/align/gaps_array.h
        seqan/align/gaps_base.h
        seqan/align/gaps_iterator_anchor.h
        seqan/align/gaps_iterator_array.h
        seqan/align/gaps_iterator_base.h
        seqan/align/global_alignment_banded.h
        seqan/align/global_alignment_hirschberg_impl.h
        seqan/align/global_alignment_myers_hirschberg_impl.h
        seqan/align/global_alignment_myers_impl.h
        seqan/align/global_alignment_specialized.h
        seqan/align/global_alignment_unbanded.h
        seqan/align/local_alignment_banded.h
        seqan/align/local_alignment_banded_waterman_eggert_impl.h
        seqan/align/local_alignment_enumeration.h
        seqan/align/local_alignment_enumeration_banded.h
        seqan/align/local_alignment_enumeration_unbanded.h
        seqan/align/local_alignment_unbanded.h
        seqan/align/local_alignment_waterman_eggert_impl.h
        seqan/align/matrix_base.h
        seqan/align_extend/align_extend.h
        seqan/align_extend/align_extend_base.h
        seqan/align_extend/dp_scout_xdrop.h
        seqan/align_profile/add_to_profile.h
        seqan/align_profile/score_profile_seq.h
        seqan/align_split/align_split_interface.h
        seqan/align_split/dp_scout_split.h
        seqan/alignment_free/af_d2.h
        seqan/alignment_free/af_d2star.h
        seqan/alignment_free/af_d2z.h
        seqan/alignment_free/af_n2.h
        seqan/alignment_free/alignment_free_base.h
        seqan/alignment_free/alignment_free_comparison.h
        seqan/alignment_free/kmer_functions.h
        seqan/arg_parse/arg_parse_argument.h
        seqan/arg_parse/arg_parse_ctd_support.h
        seqan/arg_parse/arg_parse_doc.h
        seqan/arg_parse/arg_parse_exceptions.h
        seqan/arg_parse/arg_parse_option.h
        seqan/arg_parse/arg_parse_parse.h
        seqan/arg_parse/arg_parse_type_support.h
        seqan/arg_parse/arg_parse_version_check.h
        seqan/arg_parse/argument_parser.h
        seqan/arg_parse/tool_doc.h
        seqan/arg_parse/xml_support.h
        seqan/bam_io/bam_alignment_record.h
        seqan/bam_io/bam_alignment_record_util.h
        seqan/bam_io/bam_file.h
        seqan/bam_io/bam_header_record.h
        seqan/bam_io/bam_index_bai.h
        seqan/bam_io/bam_io_context.h
        seqan/bam_io/bam_sam_conversion.h
        seqan/bam_io/bam_scanner_cache.h
        seqan/bam_io/bam_tags_dict.h
        seqan/bam_io/cigar.h
        seqan/bam_io/read_bam.h
        seqan/bam_io/read_sam.h
        seqan/bam_io/write_bam.h
        seqan/bam_io/write_sam.h
        seqan/basic/aggregate_concept.h
        seqan/basic/allocator_chunkpool.h
        seqan/basic/allocator_interface.h
        seqan/basic/allocator_multipool.h
        seqan/basic/allocator_simple.h
        seqan/basic/allocator_singlepool.h
        seqan/basic/allocator_to_std.h
        seqan/basic/alphabet_adapt_builtins.h
        seqan/basic/alphabet_bio.h
        seqan/basic/alphabet_concept.h
        seqan/basic/alphabet_math.h
        seqan/basic/alphabet_profile.h
        seqan/basic/alphabet_qualities.h
        seqan/basic/alphabet_residue.h
        seqan/basic/alphabet_residue_funcs.h
        seqan/basic/alphabet_residue_tabs.h
        seqan/basic/alphabet_simple_type.h
        seqan/basic/alphabet_storage.h
        seqan/basic/array_construct_destruct.h
        seqan/basic/basic_aggregate.h
        seqan/basic/basic_allocator.h
        seqan/basic/basic_alphabet.h
        seqan/basic/basic_concept.h
        seqan/basic/basic_container.h
        seqan/basic/basic_debug.h
        seqan/basic/basic_device.h
        seqan/basic/basic_exception.h
        seqan/basic/basic_functors.h
        seqan/basic/basic_fundamental.h
        seqan/basic/basic_iterator.h
        seqan/basic/basic_math.h
        seqan/basic/basic_metaprogramming.h
        seqan/basic/basic_parallelism.h
        seqan/basic/basic_proxy.h
        seqan/basic/basic_simd_vector.h
        seqan/basic/basic_smart_pointer.h
        seqan/basic/basic_stream.h
        seqan/basic/basic_tangle.h
        seqan/basic/basic_type.h
        seqan/basic/basic_view.h
        seqan/basic/boost_preprocessor_subset.h
        seqan/basic/builtin_functions.h
        seqan/basic/concept_checking.h
        seqan/basic/container_concept.h
        seqan/basic/debug_helper.h
        seqan/basic/debug_test_system.h
        seqan/basic/fundamental_chunking.h
        seqan/basic/fundamental_comparison.h
        seqan/basic/fundamental_concepts.h
        seqan/basic/fundamental_conversion.h
        seqan/basic/fundamental_metafunctions.h
        seqan/basic/fundamental_tags.h
        seqan/basic/fundamental_transport.h
        seqan/basic/holder_base.h
        seqan/basic/holder_simple.h
        seqan/basic/holder_tristate.h
        seqan/basic/hosted_type_interface.h
        seqan/basic/iterator_adapt_pointer.h
        seqan/basic/iterator_adapt_std.h
        seqan/basic/iterator_adaptor.h
        seqan/basic/iterator_base.h
        seqan/basic/iterator_concept.h
        seqan/basic/iterator_counting.h
        seqan/basic/iterator_interface.h
        seqan/basic/iterator_position.h
        seqan/basic/iterator_range.h
        seqan/basic/iterator_zip.h
        seqan/basic/macro_deprecated.h
        seqan/basic/math_functions.h
        seqan/basic/math_log_space_value.h
        seqan/basic/metaprogramming_control.h
        seqan/basic/metaprogramming_enable_if.h
        seqan/basic/metaprogramming_logic.h
        seqan/basic/metaprogramming_math.h
        seqan/basic/metaprogramming_type.h
        seqan/basic/metaprogramming_type_algebra.h
        seqan/basic/pair_base.h
        seqan/basic/pair_bit_compressed.h
        seqan/basic/pair_packed.h
        seqan/basic/profiling.h
        seqan/basic/property_map_concept.h
        seqan/basic/proxy_base.h
        seqan/basic/proxy_iterator.h
        seqan/basic/test_system.h
        seqan/basic/triple_base.h
        seqan/basic/triple_packed.h
        seqan/basic/tuple_base.h
        seqan/basic/tuple_bit_compressed.h
        seqan/basic/volatile_ptr.h
        seqan/bed_io/bed_file.h
        seqan/bed_io/bed_record.h
        seqan/bed_io/read_bed.h
        seqan/bed_io/write_bed.h
        seqan/blast/blast_base.h
        seqan/blast/blast_io_context.h
        seqan/blast/blast_record.h
        seqan/blast/blast_report_out.h
        seqan/blast/blast_statistics.h
        seqan/blast/blast_tabular.h
        seqan/blast/blast_tabular_in.h
        seqan/blast/blast_tabular_lowlevel.h
        seqan/blast/blast_tabular_out.h
        seqan/consensus/consensus_aligner.h
        seqan/consensus/consensus_aligner_interface.h
        seqan/consensus/consensus_alignment_options.h
        seqan/consensus/consensus_base.h
        seqan/consensus/consensus_builder.h
        seqan/consensus/consensus_library.h
        seqan/consensus/consensus_realign.h
        seqan/consensus/consensus_score.h
        seqan/consensus/overlap_info_computation.h
        seqan/consensus/overlapper.h
        seqan/file/file_base.h
        seqan/file/file_cstyle.h
        seqan/file/file_forwards.h
        seqan/file/file_interface.h
        seqan/file/file_mapping.h
        seqan/file/file_page.h
        seqan/file/string_external.h
        seqan/file/string_mmap.h
        seqan/find/find_abndm.h
        seqan/find/find_ahocorasick.h
        seqan/find/find_base.h
        seqan/find/find_begin.h
        seqan/find/find_bndm.h
        seqan/find/find_bom.h
        seqan/find/find_hamming_simple.h
        seqan/find/find_horspool.h
        seqan/find/find_lambda.h
        seqan/find/find_multi.h
        seqan/find/find_multiple_bfam.h
        seqan/find/find_multiple_shiftand.h
        seqan/find/find_myers_ukkonen.h
        seqan/find/find_pattern_base.h
        seqan/find/find_pex.h
        seqan/find/find_score.h
        seqan/find/find_set_horspool.h
        seqan/find/find_shiftand.h
        seqan/find/find_shiftor.h
        seqan/find/find_simple.h
        seqan/find/find_wild_shiftand.h
        seqan/find/find_wumanber.h
        seqan/gff_io/gff_file.h
        seqan/gff_io/gff_io_base.h
        seqan/graph_algorithms/all_pairs_shortest_path.h
        seqan/graph_algorithms/bellman_ford.h
        seqan/graph_algorithms/bipartite_matching.h
        seqan/graph_algorithms/breadth_first_search.h
        seqan/graph_algorithms/connected_components.h
        seqan/graph_algorithms/depth_first_search.h
        seqan/graph_algorithms/dijkstra.h
        seqan/graph_algorithms/floyd_warshall.h
        seqan/graph_algorithms/ford_fulkerson.h
        seqan/graph_algorithms/graph_algorithm_heap_tree.h
        seqan/graph_algorithms/graph_algorithm_hmm.h
        seqan/graph_algorithms/graph_algorithm_lis_his.h
        seqan/graph_algorithms/kruskal.h
        seqan/graph_algorithms/path_growing.h
        seqan/graph_algorithms/prim.h
        seqan/graph_algorithms/single_source_shortest_path.h
        seqan/graph_algorithms/strongly_connected_compnents.h
        seqan/graph_algorithms/topological_sort.h
        seqan/graph_algorithms/transitive_closure.h
        seqan/graph_algorithms/weakly_connected_components.h
        seqan/graph_algorithms/weighted_bipartite_matching.h
        seqan/graph_align/graph_algorithm_refine_align.h
        seqan/graph_align/graph_algorithm_refine_aligngraph.h
        seqan/graph_align/graph_algorithm_refine_annotation.h
        seqan/graph_align/graph_algorithm_refine_exact.h
        seqan/graph_align/graph_algorithm_refine_exact_iterative.h
        seqan/graph_align/graph_algorithm_refine_fragment.h
        seqan/graph_align/graph_algorithm_refine_inexact.h
        seqan/graph_align/graph_algorithm_refine_scoring.h
        seqan/graph_align/graph_impl_align.h
        seqan/graph_align/graph_impl_align_adapt.h
        seqan/graph_msa/graph_align_tcoffee_base.h
        seqan/graph_msa/graph_align_tcoffee_distance.h
        seqan/graph_msa/graph_align_tcoffee_guidetree.h
        seqan/graph_msa/graph_align_tcoffee_io.h
        seqan/graph_msa/graph_align_tcoffee_kmer.h
        seqan/graph_msa/graph_align_tcoffee_library.h
        seqan/graph_msa/graph_align_tcoffee_msa.h
        seqan/graph_msa/graph_align_tcoffee_progressive.h
        seqan/graph_msa/graph_align_tcoffee_refinement.h
        seqan/graph_types/graph_base.h
        seqan/graph_types/graph_drawing.h
        seqan/graph_types/graph_edgestump.h
        seqan/graph_types/graph_idmanager.h
        seqan/graph_types/graph_impl_automaton.h
        seqan/graph_types/graph_impl_directed.h
        seqan/graph_types/graph_impl_hmm.h
        seqan/graph_types/graph_impl_oracle.h
        seqan/graph_types/graph_impl_tree.h
        seqan/graph_types/graph_impl_trie.h
        seqan/graph_types/graph_impl_undirected.h
        seqan/graph_types/graph_impl_wordgraph.h
        seqan/graph_types/graph_interface.h
        seqan/graph_types/graph_iterator.h
        seqan/graph_types/graph_iterator_adjacency.h
        seqan/graph_types/graph_iterator_bfs.h
        seqan/graph_types/graph_iterator_dfs.h
        seqan/graph_types/graph_iterator_edge.h
        seqan/graph_types/graph_iterator_outedge.h
        seqan/graph_types/graph_iterator_vertex.h
        seqan/graph_types/graph_utility_parsing.h
        seqan/graph_types/property_map_generic.h
        seqan/graph_types/property_map_internal.h
        seqan/graph_types/property_map_internal_pointer.h
        seqan/index/find2_backtracking.h
        seqan/index/find2_base.h
        seqan/index/find2_functors.h
        seqan/index/find2_index.h
        seqan/index/find2_index_multi.h
        seqan/index/find2_vstree_factory.h
        seqan/index/find_backtracking.h
        seqan/index/find_index.h
        seqan/index/find_index_approx.h
        seqan/index/find_index_binary.h
        seqan/index/find_index_esa.h
        seqan/index/find_index_lambda.h
        seqan/index/find_index_qgram.h
        seqan/index/find_pigeonhole.h
        seqan/index/find_quasar.h
        seqan/index/find_swift.h
        seqan/index/index_base.h
        seqan/index/index_bidirectional.h
        seqan/index/index_bidirectional_stree.h
        seqan/index/index_bifm.h
        seqan/index/index_bifm_stree.h
        seqan/index/index_bwt.h
        seqan/index/index_childtab.h
        seqan/index/index_device.h
        seqan/index/index_dfi.h
        seqan/index/index_esa_algs.h
        seqan/index/index_esa_algs_multi.h
        seqan/index/index_esa_base.h
        seqan/index/index_esa_drawing.h
        seqan/index/index_esa_stree.h
        seqan/index/index_fm.h
        seqan/index/index_fm_compressed_sa.h
        seqan/index/index_fm_compressed_sa_iterator.h
        seqan/index/index_fm_dox.h
        seqan/index/index_fm_lf_table.h
        seqan/index/index_fm_rank_dictionary_base.h
        seqan/index/index_fm_rank_dictionary_levels.h
        seqan/index/index_fm_rank_dictionary_naive.h
        seqan/index/index_fm_rank_dictionary_wt.h
        seqan/index/index_fm_right_array_binary_tree.h
        seqan/index/index_fm_right_array_binary_tree_iterator.h
        seqan/index/index_fm_sparse_string.h
        seqan/index/index_fm_stree.h
        seqan/index/index_forwards.h
        seqan/index/index_lcp.h
        seqan/index/index_lcp_tree.h
        seqan/index/index_pizzachili.h
        seqan/index/index_pizzachili_find.h
        seqan/index/index_pizzachili_string.h
        seqan/index/index_qgram.h
        seqan/index/index_qgram_bucketrefinement.h
        seqan/index/index_qgram_openaddressing.h
        seqan/index/index_qgram_stree.h
        seqan/index/index_sa_btree.h
        seqan/index/index_sa_bwtwalk.h
        seqan/index/index_sa_lss.h
        seqan/index/index_sa_mm.h
        seqan/index/index_sa_qsort.h
        seqan/index/index_sa_stree.h
        seqan/index/index_sa_truncated.h
        seqan/index/index_shawarma.h
        seqan/index/index_shims.h
        seqan/index/index_skew3.h
        seqan/index/index_skew7.h
        seqan/index/index_skew7_multi.h
        seqan/index/index_view.h
        seqan/index/index_wotd.h
        seqan/index/pipe_merger3.h
        seqan/index/pipe_merger7.h
        seqan/index/pizzachili_api.h
        seqan/index/pump_extender3.h
        seqan/index/pump_extender7.h
        seqan/index/pump_lcp_core.h
        seqan/index/pump_separator7.h
        seqan/index/radix.h
        seqan/index/repeat_base.h
        seqan/index/shape_base.h
        seqan/index/shape_gapped.h
        seqan/index/shape_minimizer.h
        seqan/index/shape_onegapped.h
        seqan/index/shape_predefined.h
        seqan/index/shape_threshold.h
        seqan/journaled_set/journal_alignment_interface.h
        seqan/journaled_set/journal_alignment_traceback_adaptor.h
        seqan/journaled_set/journaled_set_base.h
        seqan/journaled_set/journaled_set_impl.h
        seqan/journaled_set/journaled_set_join.h
        seqan/journaled_set/journaled_set_join_config.h
        seqan/journaled_set/journaled_set_join_global_align_compact.h
        seqan/journaled_set/journaled_set_join_global_align_manhatten.h
        seqan/journaled_set/journaled_set_journal_trace_descriptor.h
        seqan/journaled_set/score_biaffine.h
        seqan/journaled_string_tree/delta_map.h
        seqan/journaled_string_tree/delta_map_entry.h
        seqan/journaled_string_tree/delta_map_iterator.h
        seqan/journaled_string_tree/delta_store.h
        seqan/journaled_string_tree/journaled_string_tree_base.h
        seqan/journaled_string_tree/journaled_string_tree_impl.h
        seqan/journaled_string_tree/journaled_string_tree_sequence_buffer.h
        seqan/journaled_string_tree/journaled_string_tree_traverser.h
        seqan/journaled_string_tree/journaled_string_tree_traverser_node.h
        seqan/journaled_string_tree/journaled_string_tree_traverser_util.h
        seqan/journaled_string_tree/jst_extension_base.h
        seqan/journaled_string_tree/jst_extension_horspool.h
        seqan/journaled_string_tree/jst_extension_myers_ukkonen.h
        seqan/journaled_string_tree/jst_extension_shiftand.h
        seqan/journaled_string_tree/jst_extension_shiftor.h
        seqan/journaled_string_tree/observable.h
        seqan/journaled_string_tree/stack_observer.h
        seqan/map/map_adapter_stl.h
        seqan/map/map_base.h
        seqan/map/map_chooser.h
        seqan/map/map_skiplist.h
        seqan/map/map_vector.h
        seqan/map/sumlist.h
        seqan/map/sumlist_mini.h
        seqan/map/sumlist_skip.h
        seqan/math/math_common_factor.h
        seqan/math/math_operators.h
        seqan/math/math_rational.h
        seqan/misc/accumulators.h
        seqan/misc/base.h
        seqan/misc/bit_twiddling.h
        seqan/misc/bit_twiddling_functors.h
        seqan/misc/dequeue.h
        seqan/misc/edit_environment.h
        seqan/misc/interval_tree.h
        seqan/misc/map.h
        seqan/misc/memset.h
        seqan/misc/name_store_cache.h
        seqan/misc/priority_type_base.h
        seqan/misc/priority_type_heap.h
        seqan/misc/set.h
        seqan/misc/svg.h
        seqan/misc/terminal.h
        seqan/misc/union_find.h
        seqan/modifier/cyclic_shape.h
        seqan/modifier/modifier_alphabet.h
        seqan/modifier/modifier_alphabet_expansion.h
        seqan/modifier/modifier_cyclic_shape.h
        seqan/modifier/modifier_functors.h
        seqan/modifier/modifier_iterator.h
        seqan/modifier/modifier_padding.h
        seqan/modifier/modifier_position.h
        seqan/modifier/modifier_reverse.h
        seqan/modifier/modifier_shortcuts.h
        seqan/modifier/modifier_string.h
        seqan/modifier/modifier_view.h
        seqan/parallel/parallel_algorithms.h
        seqan/parallel/parallel_atomic_misc.h
        seqan/parallel/parallel_atomic_primitives.h
        seqan/parallel/parallel_lock.h
        seqan/parallel/parallel_macros.h
        seqan/parallel/parallel_queue.h
        seqan/parallel/parallel_queue_suspendable.h
        seqan/parallel/parallel_resource_pool.h
        seqan/parallel/parallel_sequence.h
        seqan/parallel/parallel_serializer.h
        seqan/parallel/parallel_splitting.h
        seqan/parallel/parallel_tags.h
        seqan/parse_lm/local_match_store.h
        seqan/parse_lm/parse_blastn_tabular.h
        seqan/parse_lm/parse_lastz_general.h
        seqan/parse_lm/parse_stellar_gff.h
        seqan/pipe/pipe_base.h
        seqan/pipe/pipe_caster.h
        seqan/pipe/pipe_counter.h
        seqan/pipe/pipe_echoer.h
        seqan/pipe/pipe_edit_environment.h
        seqan/pipe/pipe_filter.h
        seqan/pipe/pipe_iterator.h
        seqan/pipe/pipe_joiner.h
        seqan/pipe/pipe_namer.h
        seqan/pipe/pipe_sampler.h
        seqan/pipe/pipe_shifter.h
        seqan/pipe/pipe_source.h
        seqan/pipe/pipe_tupler.h
        seqan/pipe/pool_base.h
        seqan/pipe/pool_mapper.h
        seqan/pipe/pool_sorter.h
        seqan/random/random_base.h
        seqan/random/random_beta.h
        seqan/random/random_util.h
        seqan/realign/realign_base.h
        seqan/realign/realign_helper_functions.h
        seqan/reduced_aminoacid/reduced_aminoacid_base.h
        seqan/reduced_aminoacid/reduced_aminoacid_base_late.h
        seqan/reduced_aminoacid/reduced_aminoacid_cluster_red_base.h
        seqan/reduced_aminoacid/reduced_aminoacid_cluster_red_tables_20_to_n_b62.h
        seqan/reduced_aminoacid/reduced_aminoacid_cluster_red_tables_22_to_n_b62.h
        seqan/reduced_aminoacid/reduced_aminoacid_cluster_red_tables_24_to_n_b62.h
        seqan/reduced_aminoacid/reduced_aminoacid_murphy10_base.h
        seqan/reduced_aminoacid/reduced_aminoacid_murphy10_tables.h
        seqan/rna_io/bpseq_read_write.h
        seqan/rna_io/connect_read_write.h
        seqan/rna_io/dot_bracket_read_write.h
        seqan/rna_io/ebpseq_read_write.h
        seqan/rna_io/rna_header.h
        seqan/rna_io/rna_io_context.h
        seqan/rna_io/rna_record.h
        seqan/rna_io/rna_struct_file.h
        seqan/rna_io/stockholm_read_write.h
        seqan/rna_io/vienna_read_write.h
        seqan/roi_io/read_roi.h
        seqan/roi_io/roi_file.h
        seqan/roi_io/roi_io_context.h
        seqan/roi_io/roi_record.h
        seqan/roi_io/write_roi.h
        seqan/score/score_base.h
        seqan/score/score_edit.h
        seqan/score/score_matrix.h
        seqan/score/score_matrix_data.h
        seqan/score/score_matrix_dyn.h
        seqan/score/score_matrix_io.h
        seqan/score/score_simd_wrapper.h
        seqan/score/score_simple.h
        seqan/seeds/banded_chain_alignment.h
        seqan/seeds/banded_chain_alignment_impl.h
        seqan/seeds/banded_chain_alignment_profile.h
        seqan/seeds/banded_chain_alignment_scout.h
        seqan/seeds/banded_chain_alignment_traceback.h
        seqan/seeds/basic_iter_indirect.h
        seqan/seeds/seeds_base.h
        seqan/seeds/seeds_combination.h
        seqan/seeds/seeds_extension.h
        seqan/seeds/seeds_global_chaining.h
        seqan/seeds/seeds_global_chaining_base.h
        seqan/seeds/seeds_global_chaining_gusfield.h
        seqan/seeds/seeds_seed_base.h
        seqan/seeds/seeds_seed_chained.h
        seqan/seeds/seeds_seed_diagonal.h
        seqan/seeds/seeds_seed_set_base.h
        seqan/seeds/seeds_seed_set_non_scored.h
        seqan/seeds/seeds_seed_set_scored.h
        seqan/seeds/seeds_seed_set_unordered.h
        seqan/seeds/seeds_seed_simple.h
        seqan/seq_io/bam_sam.h
        seqan/seq_io/fai_index.h
        seqan/seq_io/fasta_fastq.h
        seqan/seq_io/genomic_region.h
        seqan/seq_io/read_embl.h
        seqan/seq_io/read_genbank.h
        seqan/seq_io/sequence_file.h
        seqan/sequence/adapt_array_pointer.h
        seqan/sequence/adapt_stl_container.h
        seqan/sequence/container_view.h
        seqan/sequence/container_view_zip.h
        seqan/sequence/iter_concat_virtual.h
        seqan/sequence/segment_base.h
        seqan/sequence/segment_infix.h
        seqan/sequence/segment_prefix.h
        seqan/sequence/segment_suffix.h
        seqan/sequence/segment_utils.h
        seqan/sequence/sequence_concatenator.h
        seqan/sequence/sequence_forwards.h
        seqan/sequence/sequence_interface.h
        seqan/sequence/sequence_lexical.h
        seqan/sequence/sequence_shortcuts.h
        seqan/sequence/string_alloc.h
        seqan/sequence/string_array.h
        seqan/sequence/string_base.h
        seqan/sequence/string_block.h
        seqan/sequence/string_cstyle.h
        seqan/sequence/string_packed.h
        seqan/sequence/string_packed_old.h
        seqan/sequence/string_set_base.h
        seqan/sequence/string_set_concat_direct.h
        seqan/sequence/string_set_dependent_generous.h
        seqan/sequence/string_set_dependent_tight.h
        seqan/sequence/string_set_owner.h
        seqan/sequence/string_set_segment.h
        seqan/sequence/string_set_view.h
        seqan/sequence_journaled/journal_entries_sorted_array.h
        seqan/sequence_journaled/journal_entry.h
        seqan/sequence_journaled/sequence_journaled.h
        seqan/sequence_journaled/sequence_journaled_iterator.h
        seqan/sequence_journaled/sequence_journaled_iterator_fast.h
        seqan/simple_intervals_io/simple_intervals_file.h
        seqan/simple_intervals_io/simple_intervals_io.h
        seqan/statistics/statistics_base.h
        seqan/statistics/statistics_markov_model.h
        seqan/store/store_align.h
        seqan/store/store_align_intervals.h
        seqan/store/store_all.h
        seqan/store/store_annotation.h
        seqan/store/store_base.h
        seqan/store/store_contig.h
        seqan/store/store_intervaltree.h
        seqan/store/store_io.h
        seqan/store/store_io_gff.h
        seqan/store/store_io_sam.h
        seqan/store/store_io_ucsc.h
        seqan/store/store_library.h
        seqan/store/store_matepair.h
        seqan/store/store_read.h
        seqan/stream/adapt_ios.h
        seqan/stream/buffered_stream.h
        seqan/stream/file_stream.h
        seqan/stream/formatted_file.h
        seqan/stream/guess_format.h
        seqan/stream/iostream_bgzf.h
        seqan/stream/iostream_bzip2.h
        seqan/stream/iostream_bzip2_impl.h
        seqan/stream/iostream_zip.h
        seqan/stream/iostream_zip_impl.h
        seqan/stream/iostream_zutil.h
        seqan/stream/iter_stream.h
        seqan/stream/lexical_cast.h
        seqan/stream/stream_base.h
        seqan/stream/stream_compressor.h
        seqan/stream/tokenization.h
        seqan/stream/virtual_stream.h
        seqan/system/file_async.h
        seqan/system/file_directory.h
        seqan/system/file_forwards.h
        seqan/system/file_sync.h
        seqan/system/system_base.h
        seqan/system/system_event_win.h
        seqan/system/system_forwards.h
        seqan/tabix_io/tabix_index_tbi.h
        seqan/translation/translation.h
        seqan/translation/translation_tables.h
        seqan/ucsc_io/ucsc_file.h
        seqan/ucsc_io/ucsc_io.h
        seqan/ucsc_io/ucsc_record.h
        seqan/vcf_io/read_vcf.h
        seqan/vcf_io/vcf_file.h
        seqan/vcf_io/vcf_header.h
        seqan/vcf_io/vcf_header_record.h
        seqan/vcf_io/vcf_io_context.h
        seqan/vcf_io/vcf_record.h
        seqan/vcf_io/write_vcf.h
        seqan/align.h
        seqan/align_extend.h
        seqan/align_profile.h
        seqan/align_split.h
        seqan/alignment_free.h
        seqan/arg_parse.h
        seqan/bam_io.h
        seqan/basic.h
        seqan/bed_io.h
        seqan/blast.h
        seqan/consensus.h
        seqan/file.h
        seqan/find.h
        seqan/gff_io.h
        seqan/graph_algorithms.h
        seqan/graph_align.h
        seqan/graph_msa.h
        seqan/graph_types.h
        seqan/index.h
        seqan/journaled_set.h
        seqan/journaled_string_tree.h
        seqan/map.h
        seqan/math.h
        seqan/modifier.h
        seqan/parallel.h
        seqan/parse_lm.h
        seqan/pipe.h
        seqan/platform.h
        seqan/random.h
        seqan/realign.h
        seqan/reduced_aminoacid.h
        seqan/rna_io.h
        seqan/roi_io.h
        seqan/score.h
        seqan/seeds.h
        seqan/seq_io.h
        seqan/sequence.h
        seqan/sequence_journaled.h
        seqan/simple_intervals_io.h
        seqan/statistics.h
        seqan/store.h
        seqan/stream.h
        seqan/system.h
        seqan/tabix_io.h
        seqan/translation.h
        seqan/ucsc_io.h
        seqan/vcf_io.h
        seqan/version.h
        alignNeedlemanForTranscript.cpp
        alignNeedlemanForTranscript.h
        alignNeedlemanWunsch.cpp
        alignNeedlemanWunsch.h
        Cds.cpp
        Cds.h
        controlLayer.cpp
        controlLayer.h
        InputParser.cpp
        InputParser.h
        model.cpp
        model.h
        myfunctions.cpp
        myfunctions.h
        myMsa.cpp
        myMsa.h
        myutil.cpp
        myutil.h
        nucleotideCodeSubstitutionMatrix.cpp
        nucleotideCodeSubstitutionMatrix.h
        parameters.cpp
        parameters.h
        reAnnotationAndMsa.cpp
        reAnnotationAndMsa.h
        sole.h
        song.cpp
        testAlignNeedlemanForTranscript.cpp
        testAlignNeedlemanWunsch.cpp
        testFastaReading.cpp
        testGetGenomeSequence.cpp
        testGffReading.cpp
        testMsa.cpp
        testMultipleThreads.cpp
        testMyGffReading.cpp
        testNucleotideCodeSubstitutionMatrix.cpp
        testReAnnotationAndMsa.cpp
        testRunExonerate.cpp
        testSdiReading.cpp)

include_directories(.)

add_executable(geneStructureBasedRealignment ${SOURCE_FILES})